pkg/gox/testdata/errors/keyword_component_prop_func.gox
package demo

func View() any {
	return <Button func="x" />
}
